8208622: [WebView] IllegalStateException when invoking print API with html form controls

Reviewed-by: kcr, mbilla